--- a/snomann.html
+++ b/snomann.html
@@ -7,13 +7,16 @@
 </head>
 <body>
     
-<svg height="500" width="500">
-    <circle cx="125" cy="200" r="50" stroke="black" stroke-width="3" fill="white" />
-    <circle cx="125" cy="130" r="35" stroke="black" stroke-width="3" fill="white" />
-    <circle cx="125" cy="80" r="25" stroke="black" stroke-width="3" fill="white" />
+<svg height="600" width="600">
+    <circle cx="250" cy="400" r="100" stroke="black" stroke-width="3" fill="white" />
+    <circle cx="250" cy="260" r="70" stroke="black" stroke-width="3" fill="white" />
+    <circle cx="250" cy="160" r="50" stroke="black" stroke-width="3" fill="white" />
 
-    <rect x="95" y="50" width="55" height="7.5" />
-    <rect x="105" y="15" width="35" height="40" />
+    <rect x="190" y="100" width="110" height="15" />
+    <rect x="210" y="30" width="70" height="80" />
+
+    <circle cx="230" cy="150" r="10" />
+    <circle cx="270" cy="150" r="10" />
 </svg>
 
 </body>
