--- a/snomann.html
+++ b/snomann.html
@@ -17,6 +17,7 @@
 
     <circle cx="230" cy="150" r="10" />
     <circle cx="270" cy="150" r="10" />
+    <circle cx="250" cy="175" r="10" fill="orange" />
 </svg>
 
 </body>
